<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <include layout="@layout/tool_bar" />

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:indeterminate="true"
        android:visibility="gone"
        android:paddingTop="0dp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:src="@drawable/logo"
        android:layout_marginBottom="0dp"
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:layout_height="150dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email"
                android:hint="@string/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_login"
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/for_package_button"
            android:hint="@string/login"
            android:textColorHint="@color/white"/>

    </LinearLayout>
</LinearLayout>